--- a/tests.html
+++ b/tests.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="mocha.css" />
+    <link rel="stylesheet" href="ourModifications.css" />
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   </head>
   <body>
